fixed gap on the changes on the reviews display

--- a/app/assets/stylesheets/reviews_show.css
+++ b/app/assets/stylesheets/reviews_show.css
@@ -9,7 +9,7 @@
     margin-left: 5%;
     border-top: solid 1px #dfdfdf;
     padding-top: 40px;
-    gap: 10%;
+    gap: 5%;
     margin-bottom: 60px;
 }
 
